remove flowbite-svelte-icons

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -6,3 +6,16 @@
   position: relative;
   top: -1px;
 }
+
+.icon {
+  width: 1.5rem;
+  height: 1.5rem;
+  color: white;
+}
+
+@media (min-width: 768px) {
+  .icon {
+    width: 2rem;
+    height: 2rem;
+  }
+}
