--- a/src/app.pcss
+++ b/src/app.pcss
@@ -12,6 +12,18 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* sky */
+  --primary-50: #f0f9ff;
+  --primary-100: #e0f2fe;
+  --primary-200: #bae6fd;
+  --primary-300: #7dd3fc;
+  --primary-400: #38bdf8;
+  --primary-500: #0ea5e9;
+  --primary-600: #0284c7;
+  --primary-700: #0369a1;
+  --primary-800: #075985;
+  --primary-900: #0c4a6e;
 }
 
 #app {
@@ -35,8 +47,7 @@
   prevents child elements of anchor tags from applying their own styles.
 */
 a {
-  color: revert;
-  text-decoration: revert;
+  text-decoration-color: revert;
 }
 
 @tailwind components;
