use custom Button

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -50,6 +50,10 @@ a {
   text-decoration-color: revert;
 }
 
+a > button {
+  text-decoration-line: none;
+}
+
 @tailwind components;
 
 @tailwind utilities;
