--- a/src/components/common.module.css
+++ b/src/components/common.module.css
@@ -25,3 +25,9 @@
   height: 1px;
   overflow: hidden;
 }
+
+.largeBoldButton {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  font-weight: bold;
+}
