--- a/src/components/icons/icons.module.css
+++ b/src/components/icons/icons.module.css
@@ -7,11 +7,5 @@
 .svg {
   width: 1.5rem;
   height: 1.5rem;
-  color: rgb(31 41 55);
-}
-
-@media (prefers-color-scheme: dark) {
-  .svg {
-    color: white;
-  }
+  color: currentcolor;
 }
