--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: center;
   padding: 0.625rem 1.25rem;
+  border: none;
   color: white;
   background-color: var(--primary-700);
   border-radius: 0.5rem;
