--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -14,11 +14,15 @@
 .headingButton {
   border-radius: 0.5rem;
   padding: 0.25rem;
+  border: none;
   color: white;
+  /* Disable the translucent gray box on iOS Safari when :active.
+     See https://stackoverflow.com/a/33681490. */
+  -webkit-tap-highlight-color: rgba(0 0 0 / 0);
 }
 
 .headingButton:active {
-  opacity: 50%;
+  color: rgba(255 255 255 / 50%);
 }
 
 .heading {
@@ -67,8 +71,10 @@
 }
 
 .navList a {
-  text-decoration-color: currentcolor;
+  text-decoration-line: none;
+  color: currentcolor;
   display: flex;
+  align-items: center;
   padding: 0.75rem;
 }
 
