--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -3,10 +3,8 @@
   align-items: center;
   background-color: var(--primary-700);
   padding: 0.5rem 0.75rem;
-}
 
-@media (min-width: 768px) {
-  .header {
+  @media (min-width: 768px) {
     padding: 0.5rem 1rem;
   }
 }
@@ -19,10 +17,10 @@
   /* Disable the translucent gray box on iOS Safari when :active.
      See https://stackoverflow.com/a/33681490. */
   -webkit-tap-highlight-color: rgba(0 0 0 / 0);
-}
 
-.headingButton:active {
-  color: rgba(255 255 255 / 50%);
+  &:active {
+    color: rgba(255 255 255 / 50%);
+  }
 }
 
 .heading {
@@ -34,10 +32,8 @@
   margin-left: 0.5rem;
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
 
-@media (min-width: 768px) {
-  .heading {
+  @media (min-width: 768px) {
     margin-left: 1rem;
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -47,10 +43,8 @@
 .headingIcon {
   width: 1.5rem;
   height: 1.5rem;
-}
 
-@media (min-width: 768px) {
-  .headingIcon {
+  @media (min-width: 768px) {
     width: 2rem;
     height: 2rem;
   }
@@ -58,15 +52,13 @@
 
 .navList > li {
   border-radius: 0.5rem;
-}
 
-.navList > li:is(:hover, :active) {
-  background-color: #ccc;
-}
+  &:is(:hover, :active) {
+    background-color: #ccc;
 
-@media (prefers-color-scheme: dark) {
-  .navList > li:is(:hover, :active) {
-    background-color: #313131;
+    @media (prefers-color-scheme: dark) {
+      background-color: #313131;
+    }
   }
 }
 
@@ -76,20 +68,18 @@
   display: flex;
   align-items: center;
   padding: 0.75rem;
-}
 
-.navList a > svg {
-  margin-right: 0.75rem;
-  color: rgb(31 41 55);
-}
+  > svg {
+    margin-right: 0.75rem;
+    color: rgb(31 41 55);
 
-.navList a > span {
-  position: relative;
-  top: -1px;
-}
+    @media (prefers-color-scheme: dark) {
+      color: white;
+    }
+  }
 
-@media (prefers-color-scheme: dark) {
-  .navList a > svg {
-    color: white;
+  > span {
+    position: relative;
+    top: -1px;
   }
 }
