--- a/src/styles/app.pcss
+++ b/src/styles/app.pcss
@@ -52,6 +52,22 @@ p {
   --primary-700: #0369a1;
   --primary-800: #075985;
   --primary-900: #0c4a6e;
+
+  --app-main-bg: #eee;
+  --app-section-title-color: #666;
+  --app-section-bg: white;
+  --app-section-border: 1px solid #66666688;
+  --app-section-icon-color: #666;
+  --danger: #dc3545;
+  --danger-hover: #bb2d3b;
+
+  @media (prefers-color-scheme: dark) {
+    --app-main-bg: #333;
+    --app-section-title-color: #bbb;
+    --app-section-bg: #444;
+    --app-section-border: 1px solid #88888888;
+    --app-section-icon-color: #bbb;
+  }
 }
 
 #app {
