--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -2,41 +2,56 @@
   display: flex;
   align-items: center;
   background-color: var(--primary-700);
-  padding: 0.5rem 0.75rem;
+  height: 3rem;
+  --padding-x: 0.5rem;
+  padding: 0 var(--padding-x);
 
   @media (min-width: 768px) {
-    padding: 0.5rem 1rem;
+    height: 3.5rem;
+    --padding-x: 1rem;
+  }
+
+  .heading {
+    color: white;
+    font-weight: bold;
+    flex-grow: 1;
+    margin-left: 0.5rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
+
+    @media (min-width: 768px) {
+      margin-left: 1rem;
+      font-size: 1.875rem;
+      line-height: 2.25rem;
+    }
+  }
+
+  .headingButton {
+    border-radius: 0.5rem;
+    padding: 0.25rem;
+    border: none;
+    color: white;
+    /* Disable the translucent gray box on iOS Safari when :active.
+       See https://stackoverflow.com/a/33681490. */
+    -webkit-tap-highlight-color: rgba(0 0 0 / 0);
+
+    &:active {
+      color: rgba(255 255 255 / 50%);
+    }
   }
 }
 
-.headingButton {
-  border-radius: 0.5rem;
-  padding: 0.25rem;
-  border: none;
-  color: white;
-  /* Disable the translucent gray box on iOS Safari when :active.
-     See https://stackoverflow.com/a/33681490. */
-  -webkit-tap-highlight-color: rgba(0 0 0 / 0);
-
-  &:active {
-    color: rgba(255 255 255 / 50%);
-  }
-}
-
-.heading {
-  color: white;
-  font-weight: bold;
-  flex-grow: 1;
+.header.centerTitle {
+  justify-content: center;
   position: relative;
-  top: -1px;
-  margin-left: 0.5rem;
-  font-size: 1.25rem;
-  line-height: 1.75rem;
 
-  @media (min-width: 768px) {
-    margin-left: 1rem;
-    font-size: 1.875rem;
-    line-height: 2.25rem;
+  .heading {
+    flex-grow: 0;
+  }
+
+  .backLink {
+    position: absolute;
+    left: var(--padding-x);
   }
 }
 
@@ -54,11 +69,7 @@
   border-radius: 0.5rem;
 
   &:is(:hover, :active) {
-    background-color: #ccc;
-
-    @media (prefers-color-scheme: dark) {
-      background-color: #313131;
-    }
+    background-color: var(--app-main-bg);
   }
 }
 
@@ -71,10 +82,10 @@
 
   > svg {
     margin-right: 0.75rem;
-    color: rgb(31 41 55);
+    color: #555;
 
     @media (prefers-color-scheme: dark) {
-      color: white;
+      color: #bbb;
     }
   }
 
