add AccountSettings page

--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -16,9 +16,9 @@
   }
 
   &.danger:not([disabled]) {
-    background-color: var(--danger);
+    background-color: var(--danger-bg);
     &:hover {
-      background-color: var(--danger-hover);
+      background-color: var(--danger-bg-hover);
     }
   }
 
