--- a/src/styles/app.pcss
+++ b/src/styles/app.pcss
@@ -70,8 +70,9 @@ input {
   --app-section-bg: white;
   --app-section-border: 1px solid #66666688;
   --app-section-icon-color: #666;
-  --danger: #dc3545;
-  --danger-hover: #bb2d3b;
+  --danger: #ff0000;
+  --danger-bg: #dc3545;
+  --danger-bg-hover: #bb2d3b;
   --otp-code-color: var(--primary-600);
 
   @media (prefers-color-scheme: dark) {
@@ -80,6 +81,7 @@ input {
     --app-section-bg: #444;
     --app-section-border: 1px solid #88888888;
     --app-section-icon-color: #bbb;
+    --danger: #ff6666;
     --otp-code-color: var(--primary-300);
   }
 }
