--- a/src/components/Account.module.css
+++ b/src/components/Account.module.css
@@ -8,7 +8,7 @@
 
 .issuerLogo {
   margin: 0.5rem 0.75rem 0.5rem 0;
-  color: #ddd;
+  color: #eee;
   width: 4rem;
   height: 4rem;
 }
@@ -31,14 +31,20 @@
 .otpArea {
   background-color: var(--app-section-bg);
   color: currentcolor;
-  padding: 0.75rem 1.5rem;
+  padding: 0.75rem 0;
+  display: flex;
+  align-items: center;
+
+  .timerCircle {
+    height: 1.75rem;
+    width: 1.75rem;
+    margin: 0 1.25rem;
+  }
 
   .otpCode {
-    font-family: monospace;
     font-weight: bold;
     font-size: 1.875rem;
-    line-height: 2.25rem;
-    margin-top: 0.5rem;
+    margin-top: 0.75rem;
     color: var(--otp-code-color);
   }
 }
