add password encryption

--- a/src/styles/app.pcss
+++ b/src/styles/app.pcss
@@ -78,6 +78,7 @@ button {
   --danger-bg: #dc3545;
   --danger-bg-hover: #bb2d3b;
   --otp-code-color: var(--primary-600);
+  --form-error-msg-color: #ff0000;
 
   @media (prefers-color-scheme: dark) {
     --app-main-bg: #333;
@@ -87,6 +88,7 @@ button {
     --app-section-icon-color: #bbb;
     --danger: #ff6666;
     --otp-code-color: var(--primary-300);
+    --form-error-msg-color: #ff4444;
   }
 }
 
