--- a/src/components/PasswordInput.module.css
+++ b/src/components/PasswordInput.module.css
@@ -7,3 +7,15 @@
     border: 1px solid rgba(255 255 255 / 50%);
   }
 }
+
+.newPasswordForm {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+}
+
+.formErrorMessage {
+  text-align: center;
+  margin-bottom: 2rem;
+  color: var(--form-error-msg-color);
+}
