--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -87,8 +87,10 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
+  /* stylelint-disable */
   font-size: 100%;
   font: inherit;
+  /* stylelint-enable */
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
