--- a/src/components/Settings.module.css
+++ b/src/components/Settings.module.css
@@ -30,5 +30,11 @@
     svg {
       color: var(--app-section-icon-color);
     }
+
+    /* Align it with the chevrons */
+    .spinner {
+      position: relative;
+      left: -2px;
+    }
   }
 }
