--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -9,8 +9,7 @@
   @media (min-width: 768px) {
     height: 3.5rem;
     --padding-x: 1rem;
-    /* See grid-template-columns in app.pcss */
-    grid-column: 1 / 3;
+    grid-column: 1 / -1;
 
     .toggleNavButton {
       display: none;
@@ -75,4 +74,32 @@
     width: 2rem;
     height: 2rem;
   }
+}
+
+.topRightButton {
+  @media (min-width: 992px) {
+    /* use visibility:hidden instead of display:none so that the button
+       still takes up space, or else the title won't be centered */
+    visibility: hidden;
+  }
+}
+
+.rightColumn {
+  display: none;
+  overflow-y: auto;
+  padding: 1rem 0.5rem;
+  background-color: var(--nav-bg);
+
+  @media (prefers-color-scheme: dark) {
+    border-right: var(--app-section-border);
+  }
+
+  @media (min-width: 992px) {
+    display: block;
+    grid-column: 3;
+  }
+}
+
+.rightColumnButton {
+  width: 100%;
 }
