--- a/src/components/common.module.css
+++ b/src/components/common.module.css
@@ -30,6 +30,11 @@
 .mainCenter,
 .appMain {
   overflow-y: auto;
+
+  @media (min-width: 768px) {
+    grid-row: 2;
+    grid-column: 2;
+  }
 }
 
 /* Copied from https://webaim.org/techniques/css/invisiblecontent/ */
