Hide RHS button when there are no accounts

--- a/src/styles/app.pcss
+++ b/src/styles/app.pcss
@@ -131,3 +131,7 @@ button {
   /* text-decoration-line: none does not work in iOS Safari 12.5 */
   text-decoration: none;
 }
+
+.hidden {
+  display: none;
+}
